--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/timegrid": "^6.1.11",
     "@fullcalendar/vue3": "^6.1.11",
     "axios": "^1.6.8",
+    "element-plus": "^2.7.3",
     "mitt": "^3.0.1",
     "vue": "^3.2.8",
     "vue-router": "^4.3.2"
