--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "element-plus": "^2.7.3",
     "mitt": "^3.0.1",
+    "socket.io-client": "^4.7.5",
     "vue": "^3.2.8",
     "vue-router": "^4.3.2"
   },
